// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewCarReservationDetailsPage CarReservationCard for an already cancelled reservation should render correctly 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div
            class="page-header"
            id=""
          >
            CAR_BOOKING__CAR_RESERVATION__TITLE_PLURAL
          </div>
          <div />
        </div>
        <div
          class="manage-car-reservation-with-details"
        >
          <div
            class="manage-car-reservation mt4 mx4 rd2 overflow-hidden"
          >
            <div>
              <div
                class="bgred px4 py6 white large bold"
              >
                <span>
                  VIEW_RESERVATION__RESERVATION_DETAILS__CANCELLED
                </span>
              </div>
            </div>
            <div
              class="bgwhite px4 py4"
            >
              <div
                class="bdb"
              >
                <div>
                  <div>
                    <img
                      class="fit car-vendor-logo"
                      src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                    />
                  </div>
                </div>
                <div
                  class="py4"
                >
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP_SENTENCE_CASE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge"
                        data-qa="pickupTime"
                      >
                        9/16/2017
                      </div>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__FROM
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge nowrap overflow-hidden ellipsis"
                        data-qa="pickupLocation"
                      >
                        Dallas (Love Field)
                        , 
                        TX
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="py4"
              >
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__DRIVER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="driverName"
                      >
                        Cannon Biggs
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__CONFIRMATION_NUMBER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="confirmationNumber"
                      >
                        08172185US0
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="car-reservation-card-container"
          >
            <div
              class="car-reservation-card--title bgpdkblue white px5 py3 xxlarge mx4 mt4"
            >
              CAR_BOOKING__CAR_RESERVATION__TITLE
            </div>
            <div
              class="car-reservation-card--body bgwhite mx4 px4 py6"
            >
              <div
                class="car-reservation-itinerary"
              >
                <div
                  class="car-reservation-itinerary--pick-up"
                >
                  <div
                    class="pick-up--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_black icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_top"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container pick-up--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container pick-up--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Saturday, Sep 16, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="car-reservation-itinerary--return"
                >
                  <div
                    class="return--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_green icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_bottom"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container return--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__RETURN
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container return--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Tuesday, Sep 19, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="car-reservation-detail mt4 pt5 bdt"
              >
                <div>
                  <div
                    class="flex flex-cross-center"
                  >
                    <div
                      class="flex6"
                    >
                      <div>
                        <img
                          class="fit car-reservation--vendor-logo"
                          src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="gray5 my2"
                  >
                    Rental Counter is at the terminal. Shuttle is provided to pick up your car.
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__CAR_TYPE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Mid-size
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__DAILY_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div>
                      <span>
                        3 Days
                      </span>
                       
                      CAR_BOOKING__CAR_RESERVATION__SYMBOL
                      <div
                        class="currency car-reservation-detail--currency"
                      >
                        <span
                          class="money-sign"
                        >
                          $
                        </span>
                        <span
                          data-qa="total-amount"
                        >
                          73.00
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__BASE_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        219.00
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__MILEAGE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Unlimited
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__RESULT__TOTAL
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        277.09
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewCarReservationDetailsPage CarReservationCard for any single reservation manage component bottom links popup should contains two links 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div
            class="page-header"
            id=""
          >
            CAR_BOOKING__CAR_RESERVATION__TITLE_PLURAL
          </div>
          <div />
        </div>
        <div
          class="manage-car-reservation-with-details"
        >
          <div
            class="manage-car-reservation mt4 mx4 rd2 overflow-hidden"
          >
            <div />
            <div
              class="bgwhite px4 py4"
            >
              <div
                class="bdb"
              >
                <div>
                  <div>
                    <img
                      class="fit car-vendor-logo"
                      src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                    />
                  </div>
                </div>
                <div
                  class="py4"
                >
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP_SENTENCE_CASE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge"
                        data-qa="pickupTime"
                      >
                        9/16/2017
                      </div>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__FROM
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge nowrap overflow-hidden ellipsis"
                        data-qa="pickupLocation"
                      >
                        Dallas (Love Field)
                        , 
                        TX
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="py4"
              >
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__DRIVER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="driverName"
                      >
                        Cannon Biggs
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__CONFIRMATION_NUMBER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="confirmationNumber"
                      >
                        08172185US0
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mt4"
                data-qa="car-reservation-manage-button"
              >
                <button
                  class="button button--fluid large button--grey"
                  data-qa="manageCarReservationButton"
                  type="button"
                >
                  CAR_BOOKING__CAR_RESERVATION__ADD_OR_CANCEL
                </button>
              </div>
            </div>
          </div>
          <div
            class="car-reservation-card-container"
          >
            <div
              class="car-reservation-card--title bgpdkblue white px5 py3 xxlarge mx4 mt4"
            >
              CAR_BOOKING__CAR_RESERVATION__TITLE
            </div>
            <div
              class="car-reservation-card--body bgwhite mx4 px4 py6"
            >
              <div
                class="car-reservation-itinerary"
              >
                <div
                  class="car-reservation-itinerary--pick-up"
                >
                  <div
                    class="pick-up--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_black icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_top"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container pick-up--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container pick-up--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Saturday, Sep 16, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="car-reservation-itinerary--return"
                >
                  <div
                    class="return--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_green icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_bottom"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container return--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__RETURN
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container return--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Tuesday, Sep 19, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="car-reservation-detail mt4 pt5 bdt"
              >
                <div>
                  <div
                    class="flex flex-cross-center"
                  >
                    <div
                      class="flex6"
                    >
                      <div>
                        <img
                          class="fit car-reservation--vendor-logo"
                          src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="gray5 my2"
                  >
                    Rental Counter is at the terminal. Shuttle is provided to pick up your car.
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__CAR_TYPE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Mid-size
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__DAILY_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div>
                      <span>
                        3 Days
                      </span>
                       
                      CAR_BOOKING__CAR_RESERVATION__SYMBOL
                      <div
                        class="currency car-reservation-detail--currency"
                      >
                        <span
                          class="money-sign"
                        >
                          $
                        </span>
                        <span
                          data-qa="total-amount"
                        >
                          73.00
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__BASE_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        219.00
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__MILEAGE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Unlimited
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__RESULT__TOTAL
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        277.09
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewCarReservationDetailsPage CarReservationCard for any single reservation manage component bottom links popup should show cancel car reservation when click manage button 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div
            class="page-header"
            id=""
          >
            CAR_BOOKING__CAR_RESERVATION__TITLE_PLURAL
          </div>
          <div />
        </div>
        <div
          class="manage-car-reservation-with-details"
        >
          <div
            class="manage-car-reservation mt4 mx4 rd2 overflow-hidden"
          >
            <div />
            <div
              class="bgwhite px4 py4"
            >
              <div
                class="bdb"
              >
                <div>
                  <div>
                    <img
                      class="fit car-vendor-logo"
                      src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                    />
                  </div>
                </div>
                <div
                  class="py4"
                >
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP_SENTENCE_CASE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge"
                        data-qa="pickupTime"
                      >
                        9/16/2017
                      </div>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7 xlarge"
                    >
                      CAR_BOOKING__CAR_RESERVATION__FROM
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="xlarge nowrap overflow-hidden ellipsis"
                        data-qa="pickupLocation"
                      >
                        Dallas (Love Field)
                        , 
                        TX
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="py4"
              >
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__DRIVER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="driverName"
                      >
                        Cannon Biggs
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="my4"
                >
                  <div
                    class="label-container large"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__CONFIRMATION_NUMBER
                    </div>
                    <div
                      class="label-container--content m0"
                    >
                      <span
                        class="xlarge"
                        data-qa="confirmationNumber"
                      >
                        08172185US0
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mt4"
                data-qa="car-reservation-manage-button"
              >
                <button
                  class="button button--fluid large button--grey"
                  data-qa="manageCarReservationButton"
                  type="button"
                >
                  CAR_BOOKING__CAR_RESERVATION__ADD_OR_CANCEL
                </button>
              </div>
            </div>
          </div>
          <div
            class="car-reservation-card-container"
          >
            <div
              class="car-reservation-card--title bgpdkblue white px5 py3 xxlarge mx4 mt4"
            >
              CAR_BOOKING__CAR_RESERVATION__TITLE
            </div>
            <div
              class="car-reservation-card--body bgwhite mx4 px4 py6"
            >
              <div
                class="car-reservation-itinerary"
              >
                <div
                  class="car-reservation-itinerary--pick-up"
                >
                  <div
                    class="pick-up--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_black icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_top"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container pick-up--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__PICK_UP
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container pick-up--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Saturday, Sep 16, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="car-reservation-itinerary--return"
                >
                  <div
                    class="return--icon"
                  >
                    <i
                      class="white p4 circle table-cell align-middle large icon-wrapper_green icon icon_car"
                    />
                    <div
                      class="line--vertical line--vertical_bottom"
                    />
                  </div>
                  <div
                    class="line-wrapper"
                  >
                    <div
                      class="line--horizontal"
                    />
                  </div>
                  <div
                    class="label-container return--date"
                  >
                    <div
                      class="label-container--label"
                    >
                      CAR_BOOKING__CAR_RESERVATION__RETURN
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="flight-time"
                      >
                        <div
                          class="flight-time--time"
                        >
                          <span>
                            11:30
                          </span>
                          <span
                            class="time-period"
                          >
                            AM
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="label-container return--location"
                  >
                    <div
                      class="label-container--label"
                    >
                      Tuesday, Sep 19, 2017
                    </div>
                    <div
                      class="label-container--content"
                    >
                      <div
                        class="airport-info"
                      >
                        <div
                          class="airport-info--code"
                        >
                          DAL
                        </div>
                        <div
                          class="airport-info--detail"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="car-reservation-detail mt4 pt5 bdt"
              >
                <div>
                  <div
                    class="flex flex-cross-center"
                  >
                    <div
                      class="flex6"
                    >
                      <div>
                        <img
                          class="fit car-reservation--vendor-logo"
                          src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="gray5 my2"
                  >
                    Rental Counter is at the terminal. Shuttle is provided to pick up your car.
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__CAR_TYPE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Mid-size
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__DAILY_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div>
                      <span>
                        3 Days
                      </span>
                       
                      CAR_BOOKING__CAR_RESERVATION__SYMBOL
                      <div
                        class="currency car-reservation-detail--currency"
                      >
                        <span
                          class="money-sign"
                        >
                          $
                        </span>
                        <span
                          data-qa="total-amount"
                        >
                          73.00
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__BASE_RATE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        219.00
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__CAR_RESERVATION__MILEAGE
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    Unlimited
                  </div>
                </div>
                <div
                  class="clearfix mt2"
                >
                  <div
                    class="left large pr7"
                  >
                    CAR_BOOKING__RESULT__TOTAL
                  </div>
                  <div
                    class="gray5 large overflow-hidden align-right"
                  >
                    <div
                      class="currency car-reservation-detail--currency"
                    >
                      <span
                        class="money-sign"
                      >
                        $
                      </span>
                      <span
                        data-qa="total-amount"
                      >
                        277.09
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="popups"
            data-qa="manage-reservation-options"
          >
            <div
              class="backdrop visible active"
            />
            <div
              class="popup-container popup-showing active popup-container_bottom"
            >
              <div
                class="popup popup_bottom"
              >
                <div
                  class="popup-head hide"
                >
                  <h3
                    class="popup-title"
                  />
                </div>
                <div
                  class="popup-body pt5 hide"
                />
                <div
                  class="popup-buttons block-buttons"
                  data-qa="buttons-wrapper"
                >
                  <div
                    class="popup-buttons--vertical"
                  >
                    <div
                      class="mb4"
                    >
                      <div
                        class="bottom-link-list"
                      >
                        <a
                          class="bottom-link-list--item button"
                          data-qa="add-another-car"
                        >
                          SHARED__VIEW_RESERVATION__BOTTOM_LINKS_POPUP_ADD_ANOTHER_CAR
                        </a>
                        <a
                          class="bottom-link-list--item button"
                          data-qa="cancel-car-reservation"
                        >
                          SHARED__VIEW_RESERVATION__BOTTOM_LINKS_POPUP_CANCEL_CAR_RESERVATION
                        </a>
                      </div>
                      <button
                        class="button cancel-button"
                      >
                        SHARED__BUTTON_TEXT__CANCEL
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewCarReservationDetailsPage CarReservationCard for any single reservation when there are extras should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class=""
  >
    <div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="page-header"
                id=""
              >
                CAR_BOOKING__CAR_RESERVATION__TITLE_PLURAL
              </div>
              <div />
            </div>
            <div
              class="manage-car-reservation-with-details"
            >
              <div
                class="manage-car-reservation mt4 mx4 rd2 overflow-hidden"
              >
                <div />
                <div
                  class="bgwhite px4 py4"
                >
                  <div
                    class="bdb"
                  >
                    <div>
                      <div>
                        <img
                          class="fit car-vendor-logo"
                          src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                        />
                      </div>
                    </div>
                    <div
                      class="py4"
                    >
                      <div
                        class="clearfix mt2"
                      >
                        <div
                          class="left large pr7 xlarge"
                        >
                          CAR_BOOKING__CAR_RESERVATION__PICK_UP_SENTENCE_CASE
                        </div>
                        <div
                          class="gray5 large overflow-hidden align-right"
                        >
                          <div
                            class="xlarge"
                            data-qa="pickupTime"
                          >
                            9/16/2017
                          </div>
                        </div>
                      </div>
                      <div
                        class="clearfix mt2"
                      >
                        <div
                          class="left large pr7 xlarge"
                        >
                          CAR_BOOKING__CAR_RESERVATION__FROM
                        </div>
                        <div
                          class="gray5 large overflow-hidden align-right"
                        >
                          <div
                            class="xlarge nowrap overflow-hidden ellipsis"
                            data-qa="pickupLocation"
                          >
                            Dallas (Love Field)
                            , 
                            TX
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="py4"
                  >
                    <div
                      class="my4"
                    >
                      <div
                        class="label-container large"
                      >
                        <div
                          class="label-container--label"
                        >
                          CAR_BOOKING__CAR_RESERVATION__DRIVER
                        </div>
                        <div
                          class="label-container--content m0"
                        >
                          <span
                            class="xlarge"
                            data-qa="driverName"
                          >
                            Cannon Biggs
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="my4"
                    >
                      <div
                        class="label-container large"
                      >
                        <div
                          class="label-container--label"
                        >
                          CAR_BOOKING__CAR_RESERVATION__CONFIRMATION_NUMBER
                        </div>
                        <div
                          class="label-container--content m0"
                        >
                          <span
                            class="xlarge"
                            data-qa="confirmationNumber"
                          >
                            08172185US0
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="mt4"
                    data-qa="car-reservation-manage-button"
                  >
                    <button
                      class="button button--fluid large button--grey"
                      data-qa="manageCarReservationButton"
                      type="button"
                    >
                      CAR_BOOKING__CAR_RESERVATION__ADD_OR_CANCEL
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="car-reservation-card-container"
              >
                <div
                  class="car-reservation-card--title bgpdkblue white px5 py3 xxlarge mx4 mt4"
                >
                  CAR_BOOKING__CAR_RESERVATION__TITLE
                </div>
                <div
                  class="car-reservation-card--body bgwhite mx4 px4 py6"
                >
                  <div
                    class="car-reservation-itinerary"
                  >
                    <div
                      class="car-reservation-itinerary--pick-up"
                    >
                      <div
                        class="pick-up--icon"
                      >
                        <i
                          class="white p4 circle table-cell align-middle large icon-wrapper_black icon icon_car"
                        />
                        <div
                          class="line--vertical line--vertical_top"
                        />
                      </div>
                      <div
                        class="line-wrapper"
                      >
                        <div
                          class="line--horizontal"
                        />
                      </div>
                      <div
                        class="label-container pick-up--date"
                      >
                        <div
                          class="label-container--label"
                        >
                          CAR_BOOKING__CAR_RESERVATION__PICK_UP
                        </div>
                        <div
                          class="label-container--content"
                        >
                          <div
                            class="flight-time"
                          >
                            <div
                              class="flight-time--time"
                            >
                              <span>
                                11:30
                              </span>
                              <span
                                class="time-period"
                              >
                                AM
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="label-container pick-up--location"
                      >
                        <div
                          class="label-container--label"
                        >
                          Saturday, Sep 16, 2017
                        </div>
                        <div
                          class="label-container--content"
                        >
                          <div
                            class="airport-info"
                          >
                            <div
                              class="airport-info--code"
                            >
                              DAL
                            </div>
                            <div
                              class="airport-info--detail"
                            >
                              Dallas (Love Field)
                              , 
                              TX
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="car-reservation-itinerary--return"
                    >
                      <div
                        class="return--icon"
                      >
                        <i
                          class="white p4 circle table-cell align-middle large icon-wrapper_green icon icon_car"
                        />
                        <div
                          class="line--vertical line--vertical_bottom"
                        />
                      </div>
                      <div
                        class="line-wrapper"
                      >
                        <div
                          class="line--horizontal"
                        />
                      </div>
                      <div
                        class="label-container return--date"
                      >
                        <div
                          class="label-container--label"
                        >
                          CAR_BOOKING__CAR_RESERVATION__RETURN
                        </div>
                        <div
                          class="label-container--content"
                        >
                          <div
                            class="flight-time"
                          >
                            <div
                              class="flight-time--time"
                            >
                              <span>
                                11:30
                              </span>
                              <span
                                class="time-period"
                              >
                                AM
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="label-container return--location"
                      >
                        <div
                          class="label-container--label"
                        >
                          Tuesday, Sep 19, 2017
                        </div>
                        <div
                          class="label-container--content"
                        >
                          <div
                            class="airport-info"
                          >
                            <div
                              class="airport-info--code"
                            >
                              DAL
                            </div>
                            <div
                              class="airport-info--detail"
                            >
                              Dallas (Love Field)
                              , 
                              TX
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="car-reservation-detail mt4 pt5 bdt"
                  >
                    <div>
                      <div
                        class="flex flex-cross-center"
                      >
                        <div
                          class="flex6"
                        >
                          <div>
                            <img
                              class="fit car-reservation--vendor-logo"
                              src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="gray5 my2"
                      >
                        Rental Counter is at the terminal. Shuttle is provided to pick up your car.
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7"
                      >
                        CAR_BOOKING__CAR_RESERVATION__CAR_TYPE
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        Mid-size
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                      data-qa="car-booking-extras-container"
                    >
                      <div
                        class="left large pr7"
                      >
                        Rental Extras
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <span
                          class="block align-right"
                        >
                          Toddler Seat (20 to 40 lbs.)
                        </span>
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7"
                      >
                        CAR_BOOKING__CAR_RESERVATION__DAILY_RATE
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <div>
                          <span>
                            3 Days
                          </span>
                           
                          CAR_BOOKING__CAR_RESERVATION__SYMBOL
                          <div
                            class="currency car-reservation-detail--currency"
                          >
                            <span
                              class="money-sign"
                            >
                              $
                            </span>
                            <span
                              data-qa="total-amount"
                            >
                              73.00
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7"
                      >
                        CAR_BOOKING__CAR_RESERVATION__BASE_RATE
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <div
                          class="currency car-reservation-detail--currency"
                        >
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            219.00
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7"
                      >
                        CAR_BOOKING__CAR_RESERVATION__MILEAGE
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        Unlimited
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7"
                      >
                        CAR_BOOKING__RESULT__TOTAL
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <div
                          class="currency car-reservation-detail--currency"
                        >
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            277.09
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <div>
          <div>
            <div
              class="page-header"
              id=""
            >
              CAR_BOOKING__CAR_RESERVATION__TITLE_PLURAL
            </div>
            <div />
          </div>
          <div
            class="manage-car-reservation-with-details"
          >
            <div
              class="manage-car-reservation mt4 mx4 rd2 overflow-hidden"
            >
              <div />
              <div
                class="bgwhite px4 py4"
              >
                <div
                  class="bdb"
                >
                  <div>
                    <div>
                      <img
                        class="fit car-vendor-logo"
                        src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                      />
                    </div>
                  </div>
                  <div
                    class="py4"
                  >
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7 xlarge"
                      >
                        CAR_BOOKING__CAR_RESERVATION__PICK_UP_SENTENCE_CASE
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <div
                          class="xlarge"
                          data-qa="pickupTime"
                        >
                          9/16/2017
                        </div>
                      </div>
                    </div>
                    <div
                      class="clearfix mt2"
                    >
                      <div
                        class="left large pr7 xlarge"
                      >
                        CAR_BOOKING__CAR_RESERVATION__FROM
                      </div>
                      <div
                        class="gray5 large overflow-hidden align-right"
                      >
                        <div
                          class="xlarge nowrap overflow-hidden ellipsis"
                          data-qa="pickupLocation"
                        >
                          Dallas (Love Field)
                          , 
                          TX
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="py4"
                >
                  <div
                    class="my4"
                  >
                    <div
                      class="label-container large"
                    >
                      <div
                        class="label-container--label"
                      >
                        CAR_BOOKING__CAR_RESERVATION__DRIVER
                      </div>
                      <div
                        class="label-container--content m0"
                      >
                        <span
                          class="xlarge"
                          data-qa="driverName"
                        >
                          Cannon Biggs
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="my4"
                  >
                    <div
                      class="label-container large"
                    >
                      <div
                        class="label-container--label"
                      >
                        CAR_BOOKING__CAR_RESERVATION__CONFIRMATION_NUMBER
                      </div>
                      <div
                        class="label-container--content m0"
                      >
                        <span
                          class="xlarge"
                          data-qa="confirmationNumber"
                        >
                          08172185US0
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mt4"
                  data-qa="car-reservation-manage-button"
                >
                  <button
                    class="button button--fluid large button--grey"
                    data-qa="manageCarReservationButton"
                    type="button"
                  >
                    CAR_BOOKING__CAR_RESERVATION__ADD_OR_CANCEL
                  </button>
                </div>
              </div>
            </div>
            <div
              class="car-reservation-card-container"
            >
              <div
                class="car-reservation-card--title bgpdkblue white px5 py3 xxlarge mx4 mt4"
              >
                CAR_BOOKING__CAR_RESERVATION__TITLE
              </div>
              <div
                class="car-reservation-card--body bgwhite mx4 px4 py6"
              >
                <div
                  class="car-reservation-itinerary"
                >
                  <div
                    class="car-reservation-itinerary--pick-up"
                  >
                    <div
                      class="pick-up--icon"
                    >
                      <i
                        class="white p4 circle table-cell align-middle large icon-wrapper_black icon icon_car"
                      />
                      <div
                        class="line--vertical line--vertical_top"
                      />
                    </div>
                    <div
                      class="line-wrapper"
                    >
                      <div
                        class="line--horizontal"
                      />
                    </div>
                    <div
                      class="label-container pick-up--date"
                    >
                      <div
                        class="label-container--label"
                      >
                        CAR_BOOKING__CAR_RESERVATION__PICK_UP
                      </div>
                      <div
                        class="label-container--content"
                      >
                        <div
                          class="flight-time"
                        >
                          <div
                            class="flight-time--time"
                          >
                            <span>
                              11:30
                            </span>
                            <span
                              class="time-period"
                            >
                              AM
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="label-container pick-up--location"
                    >
                      <div
                        class="label-container--label"
                      >
                        Saturday, Sep 16, 2017
                      </div>
                      <div
                        class="label-container--content"
                      >
                        <div
                          class="airport-info"
                        >
                          <div
                            class="airport-info--code"
                          >
                            DAL
                          </div>
                          <div
                            class="airport-info--detail"
                          >
                            Dallas (Love Field)
                            , 
                            TX
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="car-reservation-itinerary--return"
                  >
                    <div
                      class="return--icon"
                    >
                      <i
                        class="white p4 circle table-cell align-middle large icon-wrapper_green icon icon_car"
                      />
                      <div
                        class="line--vertical line--vertical_bottom"
                      />
                    </div>
                    <div
                      class="line-wrapper"
                    >
                      <div
                        class="line--horizontal"
                      />
                    </div>
                    <div
                      class="label-container return--date"
                    >
                      <div
                        class="label-container--label"
                      >
                        CAR_BOOKING__CAR_RESERVATION__RETURN
                      </div>
                      <div
                        class="label-container--content"
                      >
                        <div
                          class="flight-time"
                        >
                          <div
                            class="flight-time--time"
                          >
                            <span>
                              11:30
                            </span>
                            <span
                              class="time-period"
                            >
                              AM
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="label-container return--location"
                    >
                      <div
                        class="label-container--label"
                      >
                        Tuesday, Sep 19, 2017
                      </div>
                      <div
                        class="label-container--content"
                      >
                        <div
                          class="airport-info"
                        >
                          <div
                            class="airport-info--code"
                          >
                            DAL
                          </div>
                          <div
                            class="airport-info--detail"
                          >
                            Dallas (Love Field)
                            , 
                            TX
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="car-reservation-detail mt4 pt5 bdt"
                >
                  <div>
                    <div
                      class="flex flex-cross-center"
                    >
                      <div
                        class="flex6"
                      >
                        <div>
                          <img
                            class="fit car-reservation--vendor-logo"
                            src="/content/mkt/images/car_vendors/Avis_Logo_results.png"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="gray5 my2"
                    >
                      Rental Counter is at the terminal. Shuttle is provided to pick up your car.
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7"
                    >
                      CAR_BOOKING__CAR_RESERVATION__CAR_TYPE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      Mid-size
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                    data-qa="car-booking-extras-container"
                  >
                    <div
                      class="left large pr7"
                    >
                      Rental Extras
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <span
                        class="block align-right"
                      >
                        Toddler Seat (20 to 40 lbs.)
                      </span>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7"
                    >
                      CAR_BOOKING__CAR_RESERVATION__DAILY_RATE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div>
                        <span>
                          3 Days
                        </span>
                         
                        CAR_BOOKING__CAR_RESERVATION__SYMBOL
                        <div
                          class="currency car-reservation-detail--currency"
                        >
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            73.00
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7"
                    >
                      CAR_BOOKING__CAR_RESERVATION__BASE_RATE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="currency car-reservation-detail--currency"
                      >
                        <span
                          class="money-sign"
                        >
                          $
                        </span>
                        <span
                          data-qa="total-amount"
                        >
                          219.00
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7"
                    >
                      CAR_BOOKING__CAR_RESERVATION__MILEAGE
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      Unlimited
                    </div>
                  </div>
                  <div
                    class="clearfix mt2"
                  >
                    <div
                      class="left large pr7"
                    >
                      CAR_BOOKING__RESULT__TOTAL
                    </div>
                    <div
                      class="gray5 large overflow-hidden align-right"
                    >
                      <div
                        class="currency car-reservation-detail--currency"
                      >
                        <span
                          class="money-sign"
                        >
                          $
                        </span>
                        <span
                          data-qa="total-amount"
                        >
                          277.09
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
